# mac

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  create.py  mac.py  main.py  project_audit.md  project_structure.txt  pyproject.toml  requirements.txt  scan.py
.github/workflows/: ci.yml
app/controllers/: __init__.py
app/models/: user.py
docs/: DEFINITION_OF_DONE.md  MAC_FULL_DOCUMENTATION.md  MAC_FULL_DOCUMENTATION_DE.md  MAC_FULL_DOCUMENTATION_EN.md  PRINCIPLES.md  PROJECT_SPEC.md
plugins/example_plugin/: plugin.json
system/: core.py
system/config/: config.json  env.py
system/data/db/: bench_users.json  orders_dbtest.json  tst_users_matrix.json  tst_users_qs.json  users.json  users_dbtest.json
system/db/: base_driver.py  json_driver.py  model.py  query.py  query_builder.py  sqlite_driver.py
system/db/manager/: bulk.py  config.py  crud.py  db_manager.py  driver_switch.py  helpers.py  transactions.py
system/handlers/: error_handler.py  event_handler.py  file_handler.py  log_handler.py  validator_handler.py
system/helpers/: core_helper.py
system/managers/: error_manager.py  event_manager.py  file_manager.py  log_manager.py  validator_manager.py
tests/: conftest.py  dbTest.py  test_bulk_speed.py  test_crud_matrix.py  test_db_manager_env.py  test_file_system.py  test_queryspec.py  test_transactions.py
